# rust-webapp-tutorial

actix-posts/: Cargo.toml  data.json
actix-posts/src/: handler.rs  main.rs
actix-posts/src/handler/: data.rs
actix-posts/static/: footer.html
actix-sample/: Cargo.toml
actix-sample/src/: main.rs
http-server/: Cargo.toml
http-server/src/: main.rs  sub.rs
