[package]
name = "actix-posts"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.22"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.107"
tera = {version = "1.20.0", default-features = false}
